--- a/src/style.scss
+++ b/src/style.scss
@@ -1,10 +1,10 @@
-@import url('https://fonts.googleapis.com/css2?family=PT+Serif:wght@400;700&family=Red+Hat+Display:wght@300;400;500;600;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=PT+Serif:wght@400;700&family=Red+Hat+Display:wght@300;400;500;600;700&display=swap");
 
 *,
 body {
   margin: 0;
   padding: 0;
-  font-family: 'Red Hat Display', sans-serif;
+  font-family: "Red Hat Display", sans-serif;
 }
 
 .formContainer {
@@ -28,7 +28,7 @@ body {
       color: #1089ff;
       font-weight: 700;
       font-size: 36px;
-      font-family: 'PT Serif', serif;
+      font-family: "PT Serif", serif;
     }
 
     .title {
@@ -135,14 +135,20 @@ body {
         .user {
           display: flex;
           align-items: center;
-          gap: 15px;
+          gap: 10px;
 
           img {
             background-color: #ddddf7;
-            height: 24px;
-            width: 24px;
+            height: 40px;
+            width: 40px;
             border-radius: 50%;
             object-fit: cover;
+          }
+
+          span {
+            font-size: 18px;
+            font-weight: 600;
+            color: #ddddf7;
           }
 
           button {
@@ -150,16 +156,197 @@ body {
             color: #ddddf7;
             font-size: 12px;
             cursor: pointer;
-            padding: 5px;
+            padding: 8px;
             border-radius: 20px;
           }
+        }
+      }
+
+      .search {
+        border-bottom: 1px solid gray;
+        width: 100%;
+
+        .searchForm {
+          padding: 10px;
+
+          input {
+            background-color: transparent;
+            border: none;
+            width: 100%;
+            color: white;
+            padding: 8px;
+            outline: none;
+            &::placeholder {
+              color: rgb(246, 242, 242);
+              font-size: 14px;
+            }
+          }
+        }
+      }
+    }
+
+    .userChat {
+      padding: 10px;
+      display: flex;
+      align-items: center;
+      gap: 15px;
+      color: white;
+      cursor: pointer;
+      &:hover {
+        background-color: #2f2d52;
+      }
+
+      img {
+        height: 40px;
+        width: 40px;
+        border-radius: 50%;
+        object-fit: cover;
+      }
+
+      .userChatInfo {
+        span {
+          font-size: 18px;
+          font-weight: 500;
+        }
+
+        p {
+          font-size: 14px;
+          font-weight: 400;
+          color: lightgray;
         }
       }
     }
 
     .chat {
       flex: 2;
-      background-color: white;
+
+      .chatInfo {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        height: 60px;
+        background-color: #5d5b8d;
+        padding: 15px;
+        color: lightgray;
+
+        span {
+          font-size: 18px;
+          font-weight: 600;
+          color: #ddddf7;
+        }
+
+        .chatIcons {
+          display: flex;
+          gap: 15px;
+
+          img {
+            height: 24px;
+            cursor: pointer;
+          }
+        }
+      }
+      .messages {
+        background-color: #ddddf7;
+        padding: 10px;
+        height: calc(100% - 180px);
+        overflow-y: scroll;
+
+        .message {
+          display: flex;
+          gap: 20px;
+          margin-bottom: 20px;
+
+          .messageInfo {
+            display: flex;
+            flex-direction: column;
+            color: gray;
+            font-weight: 400;
+
+            img {
+              height: 40px;
+              width: 40px;
+              border-radius: 50%;
+              object-fit: cover;
+            }
+          }
+
+          .messageContent {
+            max-width: 80%;
+            display: flex;
+            flex-direction: column;
+            gap: 10px;
+
+            p {
+              background-color: white;
+              padding: 10px 20px;
+              border-radius: 0px 15px 15px 15px;
+              max-width: max-content;
+            }
+
+            img {
+              width: 50%;
+            }
+          }
+
+          &.owner {
+            flex-direction: row-reverse;
+
+            .messageContent {
+              align-items: flex-end;
+
+              p {
+                background-color: #2192ff;
+                color: white;
+                border-radius: 15px 0px 15px 15px;
+              }
+            }
+          }
+        }
+      }
+
+      .input {
+        height: 50px;
+        background-color: white;
+        padding: 10px;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+
+        input {
+          width: 100%;
+          border: none;
+          outline: none;
+          color: #2f2d52;
+          font-size: 18px;
+        }
+
+        .send {
+          display: flex;
+          align-items: center;
+          gap: 10px;
+
+          img {
+            height: 24px;
+            cursor: pointer;
+          }
+
+          button {
+            border: none;
+            cursor: pointer;
+            background-color: transparent;
+            border-radius: 100%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+
+            img {
+              height: 32px;
+              width: 28px;
+              object-fit: cover;
+            }
+          }
+        }
+      }
     }
   }
 }
