--- a/src/style.scss
+++ b/src/style.scss
@@ -77,13 +77,21 @@ body {
         display: flex;
         align-items: center;
         gap: 10px;
-        color: #113cfc;
-        font-size: 12px;
+        color: rgb(246, 242, 242);
+        font-weight: 300;
+        font-size: 14px;
         cursor: pointer;
 
         img {
           width: 32px;
         }
+      }
+
+      .error {
+        color: rgb(230, 56, 56);
+        text-align: center;
+        font-weight: 400;
+        font-size: 18px;
       }
     }
 
@@ -92,6 +100,11 @@ body {
       font-size: 16px;
       margin-top: 10px;
       font-weight: 500;
+
+      .link {
+        color: white;
+        text-decoration: none;
+      }
     }
   }
 }
