--- a/src/style.scss
+++ b/src/style.scss
@@ -165,12 +165,17 @@ body {
           }
 
           button {
-            background-color: #5d5b8d;
-            color: #ddddf7;
-            font-size: 12px;
             cursor: pointer;
-            padding: 8px;
-            border-radius: 20px;
+            border: none;
+            background-color: transparent;
+            display: flex;
+            align-items: center;
+
+            img {
+               background-color: transparent;
+               width: 22px;
+               height: 28px;
+            }
           }
         }
       }
